# sampo

./: .gitignore  CMakeLists.txt  Makefile
components/toolchain/gcc/: Makefile.posix
src/: main.c
